@@ -1134,7 +1134,7 @@
       <owner>GnomeMeeting</owner>
       <type>list</type>
       <list_type>string</list_type>
-      <default>[1086549787.11023.35@golgoth01|Seconix LDAP Server|ldap://ldap.seconix.com:389/dc=seconix\,dc=com??sub|h323IdentityURL-ID,1086536533.479.17@golgoth01|Seconix ILS Server|ils://ils.seconix.com:389/objectClass=RTPerson??sub|rfc822mailbox]</default>
+      <default>[1086536533.479.17@golgoth01|Seconix ILS Server|ils://ils.seconix.com:389/objectClass=RTPerson??sub|rfc822mailbox,1086549787.11023.35@golgoth01|Seconix LDAP Server|ldap://ldap.seconix.com:389/dc=seconix\,dc=com??sub|h323IdentityURL-ID]</default>
       <locale name="C">
 	<short>User directory</short>
 	<long></long>
