@@ -948,10 +948,11 @@ gm_aw_add_addressbook (GtkWidget *addressbook_window,
 						     COLUMN_FULLNAME,
 						     NULL);
   gtk_tree_view_column_set_sort_column_id (column, COLUMN_FULLNAME);
-  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_column_set_min_width (GTK_TREE_VIEW_COLUMN (column), 125);
+  gtk_tree_view_column_set_max_width (GTK_TREE_VIEW_COLUMN (column), 250);
   gtk_tree_view_column_set_sizing (GTK_TREE_VIEW_COLUMN (column),
 				   GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+  gtk_tree_view_column_set_resizable (GTK_TREE_VIEW_COLUMN (column), true);
   gtk_tree_view_append_column (GTK_TREE_VIEW (awp->awp_tree_view), column);
   g_object_set (G_OBJECT (renderer), "weight", "bold", NULL);
 
@@ -962,9 +963,9 @@ gm_aw_add_addressbook (GtkWidget *addressbook_window,
 						     COLUMN_UURL,
 						     NULL);
   gtk_tree_view_column_set_sort_column_id (column, COLUMN_UURL);
-  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_column_set_sizing (GTK_TREE_VIEW_COLUMN (column),
 				   GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_append_column (GTK_TREE_VIEW (awp->awp_tree_view), column);
   g_object_set (G_OBJECT (renderer), "foreground", "blue",
 		"underline", TRUE, NULL);
@@ -976,9 +977,9 @@ gm_aw_add_addressbook (GtkWidget *addressbook_window,
 						     COLUMN_COMMENT,
 						     NULL);
   gtk_tree_view_column_set_sort_column_id (column, COLUMN_COMMENT);
-  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_column_set_sizing (GTK_TREE_VIEW_COLUMN (column),
 				   GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_append_column (GTK_TREE_VIEW (awp->awp_tree_view), column);
   if (gnomemeeting_addressbook_is_local (addressbook))
     g_object_set (G_OBJECT (column), "visible", false, NULL);
@@ -990,9 +991,9 @@ gm_aw_add_addressbook (GtkWidget *addressbook_window,
 						     COLUMN_SOFTWARE,
 						     NULL);
   gtk_tree_view_column_set_sort_column_id (column, COLUMN_SOFTWARE);
-  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_column_set_sizing (GTK_TREE_VIEW_COLUMN (column),
 				   GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_append_column (GTK_TREE_VIEW (awp->awp_tree_view), column);
   if (gnomemeeting_addressbook_is_local (addressbook))
     g_object_set (G_OBJECT (column), "visible", false, NULL);
@@ -1004,9 +1005,9 @@ gm_aw_add_addressbook (GtkWidget *addressbook_window,
 						     COLUMN_EMAIL,
 						     NULL);
   gtk_tree_view_column_set_sort_column_id (column, COLUMN_EMAIL);
-  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_column_set_sizing (GTK_TREE_VIEW_COLUMN (column),
 				   GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_append_column (GTK_TREE_VIEW (awp->awp_tree_view), column);
 
   renderer = gtk_cell_renderer_text_new ();
@@ -1016,9 +1017,9 @@ gm_aw_add_addressbook (GtkWidget *addressbook_window,
 						     COLUMN_LOCATION,
 						     NULL);
   gtk_tree_view_column_set_sort_column_id (column, COLUMN_LOCATION);
-  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_column_set_sizing (GTK_TREE_VIEW_COLUMN (column),
 				   GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_append_column (GTK_TREE_VIEW (awp->awp_tree_view), column);
   if (gnomemeeting_addressbook_is_local (addressbook))
     g_object_set (G_OBJECT (column), "visible", false, NULL);
@@ -1030,9 +1031,9 @@ gm_aw_add_addressbook (GtkWidget *addressbook_window,
 						     COLUMN_CATEGORIES,
 						     NULL);
   gtk_tree_view_column_set_sort_column_id (column, COLUMN_CATEGORIES);
-  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_column_set_sizing (GTK_TREE_VIEW_COLUMN (column),
 				   GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_append_column (GTK_TREE_VIEW (awp->awp_tree_view), column);
   if (!gnomemeeting_addressbook_is_local (addressbook))
     g_object_set (G_OBJECT (column), "visible", false, NULL);
@@ -1044,9 +1045,9 @@ gm_aw_add_addressbook (GtkWidget *addressbook_window,
 						     COLUMN_SPEED_DIAL,
 						     NULL);
   gtk_tree_view_column_set_sort_column_id (column, COLUMN_SPEED_DIAL);
-  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_column_set_sizing (GTK_TREE_VIEW_COLUMN (column),
 				   GTK_TREE_VIEW_COLUMN_AUTOSIZE);
+  gtk_tree_view_column_set_resizable (column, true);
   gtk_tree_view_append_column (GTK_TREE_VIEW (awp->awp_tree_view), column);
   if (!gnomemeeting_addressbook_is_local (addressbook))
     g_object_set (G_OBJECT (column), "visible", false, NULL);
