@@ -1,5 +1,9 @@
 2004-10-16  Damien Sandras  <dsandras@gnome.org>
 
+	* src/addressbook_window.cpp: Made LDAP columns resizable.
+
+2004-10-16  Damien Sandras  <dsandras@gnome.org>
+
 	* src/calls_history_window.cpp, src/calls_history_window.h, 
 	src/main_window.cpp: Only display the last 10 unique calls in the URL
 	bar. Changed API so that the number of returned calls can be
